k8s-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-converter
  template:
    metadata:
      labels:
        app: currency-converter
    spec:
      containers:
      - name: currency-converter
        image: 626635399726.dkr.ecr.us-east-2.amazonaws.com/argocd/apps:v1
        ports:
        - containerPort: 5555
