k8s-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-converter-service
spec:
  type: ClusterIP
  selector:
    app: currency-converter
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 5555
